--- a/.env.sample
+++ b/.env.sample
@@ -1,13 +1,26 @@
-ENV=dev|prod
+ENV=dev
 
 # SwiftMailer Settings
 MAILER_HOST=smtp.mailtrap.io
 MAILER_PORT=465
-MAILER_USERNAME=test
-MAILER_PASSWORD=test
+MAILER_USERNAME=edd23bb592aa5f
+MAILER_PASSWORD=874b0b30675c07
+
+
+#must create a user with username =test and password = testing
+JWT_PASSWORD=secret
+
+DB_HOST=localhost
+DB_PORT=3306 
+DB_NAME=db2
+DB_USER=ccxt
+DB_PASSWORD=123 
+DB_CHARSET=utf8
+DB_COLLATION=utf8_unicode_ci
+
 
 # RabbitMQ Settings (optional service disabled by default)
-RMQ_ENABLED=0
+RMQ_ENABLED=1
 RMQ_HOST=localhost
 RMQ_VHOST=/
 RMQ_PORT=5672
