--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,13 @@
         "php-di/php-di": "^6.3",
         "symfony/dotenv": "^5.2",
         "tuupola/slim-basic-auth": "^3.3",
-        "php-amqplib/php-amqplib": "^3.0",
-        "ext-json": "*"
+        "php-amqplib/php-amqplib": "^3.1",
+        "ext-json": "*",
+        "monolog/monolog": "^2.3",
+        "illuminate/database": "~5.1",
+        "guzzlehttp/guzzle": "~6.0",
+        "vaibhavpandeyvpz/jweety": "^1.0",
+        "lulco/phoenix": "^1.12"
     },
     "scripts": {
         "start": "php -S localhost:8080 -t public",
